# projeto-v1

./: .gitignore  README.md  json_logger.py  logger_config.py  projeto-v1.code-workspace  pyproject.toml  requirements.in  requirements.txt
general-study/: classification_results.txt  file_processor.py  file_processor_v2.py  file_processor_v3.py  ollama_client.py  pyproject.toml  tools_functions.py
general-study/helper-functions/: __init__.py  helper_functions.py
general-study/llm-client/: __init__.py  ollama_client.py
general-study/logger/: txt_logger.py
general-study/processors/: file_processor_old.py  file_processor_v2.py  file_processor_v3.py  folder_processor.py
general_study/: pyproject.toml
general_study/grading_results/: A Amazônia é nossa.txt  A Caixa de Pandora Brasileira.txt  A era da reinvenção profissional.txt  A falsa posse sob [sobre] a natureza.txt  A qualificação profissional no Brasil.txt  Amazonas, um bem de todos nós.txt  Amazonas.txt  Amazônia deve ser preocupação da população brasileira.txt  Amazônia e o mundo.txt  Amazônia e sua riqueza compartilhada.txt  Amazônia em foco.txt  Aumento do desemprego no mundo tecnológico.txt  Avanços tecnológicos.txt  Cooperação Mundial.txt  Corrigindo erros.txt  Evolução ou regressão humana.txt  Floresta Amazônica_ um problema global.txt  Futuro da crise do desemprego.txt  Nações unidas contra o desemprego.txt  O advento tecnológico.txt  O dilema que circunda a preservação da floresta amazônica.txt  O emprego do futuro.txt  O futuro dos desempregados no Brasil.txt  O progresso da tecnologia.txt  (+15 more)
(+32 files in other folders)
