[project]
name = "general_study"
version = "0.1.10"
description = "Local Python study project"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["host*", "processors*", "logger*", "helper_functions*"]